# H-control

./: .gitignore  CODEX-GIT-INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml
docs/: BUILDING_AROUND_HCONTROL.md  GestureControlLibrary_PRD.md
examples/: camera_preview.py  download_mediapipe_models.py  event_printer.py  host_app_template.py
src/hcontrol/: __init__.py  config.py  errors.py  types.py
src/hcontrol/adapters/: __init__.py  base.py  desktop.py  midi.py
src/hcontrol/api/: engine.py
src/hcontrol/camera/: __init__.py  source.py
src/hcontrol/events/: __init__.py  engine.py
src/hcontrol/geometry/: __init__.py  bbox.py
src/hcontrol/inference/: __init__.py  base.py  mediapipe_engine.py
src/hcontrol/metrics/: __init__.py  runtime.py
src/hcontrol/recognition/: __init__.py  postprocess.py
src/hcontrol/render/: __init__.py  renderer.py
src/hcontrol/tracking/: __init__.py  hand_tracker.py
tests/: test_config.py  test_engine.py  test_events.py  test_geometry.py  test_tracker.py
