[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hcontrol"
version = "0.1.0"
description = "Real-time hand gesture control library for Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "hcontrol contributors" }
]
license = { text = "MIT" }
keywords = ["gestures", "computer-vision", "mediapipe", "opencv", "hands"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mediapipe>=0.10.33,<0.11",
  "opencv-python>=4.10,<5",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
desktop = [
  "pynput>=1.8,<2",
  "PyAutoGUI>=0.9.54,<1",
]
midi = [
  "mido>=1.3,<2",
  "python-rtmidi>=1.5,<2",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<6",
  "pytest-benchmark>=4.0,<5",
  "mypy>=1.11,<2",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0.12.20241230",
  "pyyaml>=6.0.2,<7",
]

[project.urls]
Repository = "https://example.com/hcontrol"
Documentation = "https://example.com/hcontrol/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/hcontrol"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = true
disallow_subclassing_any = false
packages = ["hcontrol"]
